@@ -1,3 +1,8 @@
+2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs: Add a hack to work 
+	around broken themes that attach themes to *Panel* widget names.
+
 2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* gtk-gui/gui.stetic:
